--- a/Factory/Views/Machines/Index.cshtml
+++ b/Factory/Views/Machines/Index.cshtml
@@ -1,7 +1,7 @@
 
 
 @using Factory.Models;
-@model List<Factory.Models.
+@model List<Factory.Models.Machine>;
 
 <h2>Machine Admin</h2>
 
@@ -12,7 +12,7 @@
 
 @foreach (Machine machine in Model)
 {
-  <li>@Html.ActionLink($"{machine.Model}", "Details", new { id = machine.MachineId })<li>
+  <li>@Html.ActionLink($"{machine.Model}", "Details", new { id = machine.MachineId })</li>
 }
 
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
