add Create path to Index and add Create view file

--- a/Factory/Views/Machines/Index.cshtml
+++ b/Factory/Views/Machines/Index.cshtml
@@ -15,4 +15,5 @@
   <li>@Html.ActionLink($"{machine.Model}", "Details", new { id = machine.MachineId })</li>
 }
 
+<p>@Html.ActionLink("Add machine", "Create")</p>
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
