--- a/Factory/Views/Home/Index.cshtml
+++ b/Factory/Views/Home/Index.cshtml
@@ -1,3 +1,7 @@
+@{
+    Layout = "_Layout";
+}
+
 <h1>Dr.Sillystringz Factory Admin Page</h1>
 
 <p>@Html.ActionLink("View installed machines", "Index", "Machines")</p>
