add Engineers Index pathway

--- a/Factory/Views/Home/Index.cshtml
+++ b/Factory/Views/Home/Index.cshtml
@@ -5,3 +5,4 @@
 <h1>Dr.Sillystringz Factory Admin Page</h1>
 
 <p>@Html.ActionLink("View installed machines", "Index", "Machines")</p>
+<p>@Html.ActionLink("View employed engineers", "Index", "Engineers")</p>
