--- a/Factory/Views/Engineers/Create.cshtml
+++ b/Factory/Views/Engineers/Create.cshtml
@@ -2,7 +2,7 @@
     Layout = "_Layout";
 }
 
-@model Factory.Models.Engineer
+@model Factory.Models.Engineer;
 
 <h4>Add a new employee</h4>
 @using (Html.BeginForm())
