--- a/Factory/Views/Machines/Details.cshtml
+++ b/Factory/Views/Machines/Details.cshtml
@@ -23,5 +23,6 @@ else
   </ul>
 }
 
-<p>@Html.ActionLink("See machines", "Index")</p>
 <p>@Html.ActionLink("Add specialist", "AddEngineer", new { id = Model.MachineId })</p>
+<p>@Html.ActionLink("Delete machine", "Delete", new { id = Model.MachineId })</p>
+<p>@Html.ActionLink("See machines", "Index")</p>
