add Edit path to Details view file

--- a/Factory/Views/Machines/Details.cshtml
+++ b/Factory/Views/Machines/Details.cshtml
@@ -24,5 +24,6 @@ else
 }
 
 <p>@Html.ActionLink("Add specialist", "AddEngineer", new { id = Model.MachineId })</p>
+<p>@Html.ActionLink("Edit machine", "Edit", new { id = Model.MachineId })</p>
 <p>@Html.ActionLink("Delete machine", "Delete", new { id = Model.MachineId })</p>
 <p>@Html.ActionLink("See machines", "Index")</p>
