add Delete pathway to Details view file

--- a/Factory/Views/Engineers/Details.cshtml
+++ b/Factory/Views/Engineers/Details.cshtml
@@ -24,4 +24,5 @@ else
 }
 
 <p>@Html.ActionLink("Add machine", "AddMachine", new { id = Model.EngineerId })</p>
+<p>@Html.ActionLink("Delete engineer", "Delete", new { id = Model.EngineerId })</p>
 <p>@Html.ActionLink("See engineers", "Index")</p>
