--- a/Factory/Views/Engineers/Details.cshtml
+++ b/Factory/Views/Engineers/Details.cshtml
@@ -19,6 +19,11 @@ else
   @foreach(var join in Model.Machines)
   {
     <li>@join.Machine.Model</li>
+    @using (Html.BeginForm("DeleteMachine", "Engineers"))
+      {
+        @Html.Hidden("joinId", @join.MachineEngineerId)
+        <input type="submit" value="Remove" />
+      }
   }
   </ul>
 }
