add Location Index path to home view

--- a/Factory/Views/Home/Index.cshtml
+++ b/Factory/Views/Home/Index.cshtml
@@ -6,3 +6,4 @@
 
 <p>@Html.ActionLink("View installed machines", "Index", "Machines")</p>
 <p>@Html.ActionLink("View employed engineers", "Index", "Engineers")</p>
+<p>@Html.ActionLink("View facility locations", "Index", "Locations")</p>
