--- a/Factory/Views/Locations/Index.cshtml
+++ b/Factory/Views/Locations/Index.cshtml
@@ -5,17 +5,12 @@
 @using Factory.Models;
 @model List<Factory.Models.Location>;
 
-<h2>Facility Admin</h2>
+<h2>Location Admin</h2>
 
-@if (@Model.Count == 0)
-{
-  <h3>No facilities have been added to database</h3>
-}
 
 @foreach (Location location in Model)
 {
-  <li>@Html.ActionLink($"{location.Facility}", "Details", new { id = location.LocationId })</li>
+    <li>@Html.ActionLink($"{location.Facility}", "Details", new { id = location.LocationId })</li>
 }
 
-<p>@Html.ActionLink("Add facility", "Create")</p>
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
