change page title

--- a/Factory/Views/Locations/Index.cshtml
+++ b/Factory/Views/Locations/Index.cshtml
@@ -5,7 +5,7 @@
 @using Factory.Models;
 @model List<Factory.Models.Location>;
 
-<h2>Location Admin</h2>
+<h2>Facility Admin</h2>
 
 
 @foreach (Location location in Model)
