add pathway to Add Location view

--- a/Factory/Views/Engineers/Details.cshtml
+++ b/Factory/Views/Engineers/Details.cshtml
@@ -49,6 +49,7 @@ else
 }
 
 <p>@Html.ActionLink("Add machine", "AddMachine", new { id = Model.EngineerId })</p>
+<p>@Html.ActionLink("Add facility", "AddLocation", new { id = Model.EngineerId })</p>
 <p>@Html.ActionLink("Edit engineer", "Edit", new { id = Model.EngineerId })</p>
 <p>@Html.ActionLink("Delete engineer", "Delete", new { id = Model.EngineerId })</p>
 <p>@Html.ActionLink("See engineers", "Index")</p>
